<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cristiangarcia.classschedule.EditActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edit_activity_margin"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="@dimen/edit_activity_margin"
        android:layout_marginLeft="@dimen/edit_activity_margin"
        android:layout_marginEnd="@dimen/edit_activity_margin"
        android:layout_marginRight="@dimen/edit_activity_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_name_label"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/class_name_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:singleLine="true"
            android:minLines="2"
            android:maxLines="2" />

        <com.cristiangarcia.classschedule.ColorPickerButton
            android:id="@+id/color_picker_button"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="end|center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edit_activity_margin"
        android:layout_marginEnd="@dimen/edit_activity_margin"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/class_opt_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:singleLine="true"
            android:minLines="2"
            android:maxLines="2"
            android:hint="@string/opt_data_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edit_activity_margin"
        android:layout_marginEnd="@dimen/edit_activity_margin"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_from_label"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center" />

        <com.cristiangarcia.classschedule.TimePicker
            android:id="@+id/start_time_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/class_to_label"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center" />

        <com.cristiangarcia.classschedule.TimePicker
            android:id="@+id/end_time_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="25sp" />

    </LinearLayout>

    <include
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/edit_activity_margin"
        android:layout_marginLeft="@dimen/edit_activity_margin"
        android:layout_marginEnd="@dimen/edit_activity_margin"
        android:layout_marginRight="@dimen/edit_activity_margin"
        android:layout_marginTop="10dp"
        android:id="@+id/day_picker"
        layout="@layout/day_picker"
        android:layout_gravity="center" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/classes_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="@dimen/edit_activity_margin"
        android:layout_marginLeft="@dimen/edit_activity_margin"
        android:layout_marginEnd="@dimen/edit_activity_margin"
        android:layout_marginRight="@dimen/edit_activity_margin" />

</LinearLayout>
